RESOLVED FIXED308418
[MathML] Dynamic changes to mo attributes don't trigger relayout
https://bugs.webkit.org/show_bug.cgi?id=308418
Summary [MathML] Dynamic changes to mo attributes don't trigger relayout
Ahmad Saleem
Reported 2026-02-21 22:35:06 PST
ssia - progresses WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-21 22:35:13 PST
Ahmad Saleem
Comment 2 2026-02-21 22:38:10 PST
EWS
Comment 3 2026-02-22 09:22:25 PST
Committed 308014@main (709c3895afd7): <https://commits.webkit.org/308014@main> Reviewed commits have been landed. Closing PR #59194 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.