[MathML] Dynamic changes to mo attributes don't trigger relayout https://bugs.webkit.org/show_bug.cgi?id=308418 rdar://170907029

Reviewed by Frédéric Wang.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

When minsize, maxsize, largeop, or symmetric attributes are changed
dynamically via JavaScript, the operator layout was not updated.

This patch:
1. Adds affectsLayout tracking for layout-affecting attributes in
    MathMLOperatorElement::attributeChanged()
2. Calls updateFromElement() and setNeedsLayoutAndPreferredWidthsUpdate()
    when these attributes change
3. Adds resetStretchSize() to updateFromElement() so the parent mrow
    can re-stretch the operator with new constraints

* LayoutTests/TestExpectations: Progression
* LayoutTests/imported/w3c/web-platform-tests/mathml/presentation-markup/operators/mo-stretch-properties-dynamic-001-expected.txt: Ditto
* Source/WebCore/mathml/MathMLOperatorElement.cpp:
(WebCore::MathMLOperatorElement::attributeChanged):
* Source/WebCore/rendering/mathml/RenderMathMLOperator.cpp:
(WebCore::RenderMathMLOperator::updateFromElement):
* Source/WebCore/SaferCPPExpectations/UncheckedCallArgsCheckerExpectations:

Canonical link: https://commits.webkit.org/308014@main