Source/WebCore/mathml/MathMLOperatorElement.cpp
@@ -216,54 +216,64 @@ void MathMLOperatorElement::childrenChanged(const ChildChange& change)
 
 void MathMLOperatorElement::attributeChanged(const QualifiedName& name, const AtomString& oldValue, const AtomString& newValue, AttributeModificationReason attributeModificationReason)
 {
+    bool affectsLayout = false;
     switch (name.nodeName()) {
     case AttributeNames::formAttr:
         m_dictionaryProperty = std::nullopt;
         m_properties.dirtyFlags = MathMLOperatorDictionary::allFlags;
+        affectsLayout = true;
         break;
     case AttributeNames::lspaceAttr:
         m_leadingSpace = std::nullopt;
-        if (renderer())
-            downcast<RenderMathMLOperator>(*renderer()).updateFromElement();
+        affectsLayout = true;
         break;
     case AttributeNames::rspaceAttr:
         m_trailingSpace = std::nullopt;
-        if (renderer())
-            downcast<RenderMathMLOperator>(*renderer()).updateFromElement();
+        affectsLayout = true;
         break;
     case AttributeNames::minsizeAttr:
         m_minSize = std::nullopt;
+        affectsLayout = true;
         break;
     case AttributeNames::maxsizeAttr:
         m_maxSize = std::nullopt;
+        affectsLayout = true;
         break;
     case AttributeNames::stretchyAttr:
         m_properties.dirtyFlags |= Stretchy;
-        if (renderer())
-            downcast<RenderMathMLOperator>(*renderer()).updateFromElement();
+        affectsLayout = true;
         break;
     case AttributeNames::movablelimitsAttr:
         m_properties.dirtyFlags |= MovableLimits;
-        if (renderer())
-            downcast<RenderMathMLOperator>(*renderer()).updateFromElement();
+        affectsLayout = true;
         break;
     case AttributeNames::accentAttr:
         m_properties.dirtyFlags |= Accent;
+        affectsLayout = true;
         break;
     case AttributeNames::fenceAttr:
         m_properties.dirtyFlags |= Fence;
         break;
     case AttributeNames::largeopAttr:
         m_properties.dirtyFlags |= LargeOp;
+        affectsLayout = true;
         break;
     case AttributeNames::separatorAttr:
         m_properties.dirtyFlags |= Separator;
         break;
     case AttributeNames::symmetricAttr:
         m_properties.dirtyFlags |= Symmetric;
+        affectsLayout = true;
         break;
     default:
         break;
+    }
+
+    if (affectsLayout) {
+        if (CheckedPtr renderOperator = dynamicDowncast<RenderMathMLOperator>(renderer())) {
+            renderOperator->updateFromElement();
+            renderOperator->setNeedsLayoutAndPreferredWidthsUpdate();
+        }
     }
 
     MathMLTokenElement::attributeChanged(name, oldValue, newValue, attributeModificationReason);
